package pt.org.upskill.ui.domain;

public class Brand {
    private String name;

    public String name() {
        return name;
    }
}
