@startuml
'skinparam monochrome true
'skinparam shadowing false


title UC011 - Register vaccine

class Administrator {
    +Username: String [PK]
    +Password: String
}


class Vaccine {
    +ID: Int [PK]
    +Name: String
    +Brand: String
    +Type: VaccineType [FK]
}

class VaccineType {
    +Code: Int [PK]
    +ShortDesc: String
}

class Brand {
    +Name: String [PK]
}


' Relationships
Administrator "1" -- "1" Vaccine : register >
Vaccine "1" -- "0..1" Brand : manufactures <
Vaccine "1" -- "1" VaccineType : is of >


@enduml